COH-20073 refactor jvm options
COH-20073 refactor jvm options